--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.8"
 Django = "~3.2.0"
 
 [tool.poetry.dev-dependencies]
+ipython = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
