--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "BSD"
 python = "^3.8"
 
 Django = "~3.2.0"
+django-health-check = "~3.16.0"
 
 [tool.poetry.dev-dependencies]
 ipython = "*"
