--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.8"
 
 Django = "~3.2.0"
 django-health-check = "~3.16.0"
+psutil = "~5.8.0"
 
 [tool.poetry.dev-dependencies]
 ipython = "*"
