--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ Django = "~3.2.0"
 django-health-check = "~3.16.0"
 psutil = "~5.8.0"
 djangorestframework = "~3.12"
+psycopg2-binary = "~=2.9"
 
 [tool.poetry.dev-dependencies]
 ipython = "*"
