--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,9 +31,10 @@ services:
     user: postgres
   web_1:
     build: .
+    container_name: web_1
     command: >
-            bash -c "poetry run python manage.py migrate &&
-            poetry run python manage.py runserver 0.0.0.0:8001"
+             bash -c "poetry run python manage.py migrate &&
+              poetry run python manage.py runserver 0.0.0.0:8001"
     volumes:
       - .:/code
     ports:
@@ -48,9 +49,10 @@ services:
            condition: service_healthy
   web_2:
     build: .
+    container_name: web_2
     command: >
-            bash -c "poetry run python manage.py migrate &&
-            poetry run python manage.py runserver 0.0.0.0:8002"
+             bash -c "poetry run python manage.py migrate &&
+              poetry run python manage.py runserver 0.0.0.0:8002"
     volumes:
       - .:/code
     ports:
@@ -63,6 +65,15 @@ services:
     depends_on:
       db_2:
            condition: service_healthy
+  load_balancer:
+    image: nginx
+    volumes:
+    - ./nginx.conf:/etc/nginx/nginx.conf
+    ports:
+    - "8080:80"
+    depends_on:
+      - web_1
+      - web_2
 
 volumes:
   db-data-1:
