--- a/.github/workflows/login.yml
+++ b/.github/workflows/login.yml
@@ -25,4 +25,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: user/app:latest
+          tags: specnazm/cloud-computing:latest
