--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ django-health-check = "~3.16.0"
 psutil = "~5.8.0"
 djangorestframework = "~3.12"
 psycopg2-binary = "~=2.9"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 ipython = "*"
