Added migrations to docker compose command

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,8 @@ services:
     image: specnazm/cloud-computing
     container_name: web_1
     command: >
-             bash -c "poetry run gunicorn --bind 0.0.0.0:8001 webapp.wsgi"
+             bash -c "poetry run python manage.py migrate &&
+             poetry run gunicorn --bind 0.0.0.0:8001 webapp.wsgi"
     volumes:
       - .:/code
     ports:
@@ -50,7 +51,8 @@ services:
     image: specnazm/cloud-computing
     container_name: web_2
     command: >
-            bash -c "poetry run gunicorn --bind 0.0.0.0:8002 webapp.wsgi"
+            bash -c "poetry run python manage.py migrate &&
+            poetry run gunicorn --bind 0.0.0.0:8002 webapp.wsgi"
     volumes:
       - .:/code
     ports:
